--- a/templates/upload.html
+++ b/templates/upload.html
@@ -3,10 +3,55 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Upload</title>
+	<title>Neural Style Transfer on Images (Online) Demo </title>
+
+<!-- Font Awesome -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+
+    <!-- Bootstrap core CSS -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
+<script src="dist/bundle.js"></script>
 </head>
 <body>
-	<h1>Upload your image(s) and select a style</h1>
+	
+<div class="jumbotron jumbotron-fluid py-4" style="text-align: center; background-color: #f5f5f5;">
+    <div class="container">
+      <h1>Neural Style Transfer on Images (Online Demo)</h1>
+    </div>
+  </div>
+<div class="">
+<div class="">
+<div id="mobile-warning" hidden class="alert alert-warning" role="alert">
+  This site may have problems functioning on mobile devices. 
+  Don't worry, you can still read the description below!
+</div>
+
+<!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NMTDHX5" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+
+<style>
+  .outerdiv {position:relative; width:450px; padding-top:40px; height:180px;}
+  .div1, .div2 {position:absolute; width:248px; }
+  .div1 {top:0; left:0;}
+  .div2 {top:0; right:0; padding-top:0px}
+</style>
+
+<script>
+  var jobInProgressArray = [];
+</script>
+
+
+    <center>
+      <img src="sh1.png">
+    </center>
+
+<div class="jumbotron jumbotron-fluid py-4" style="text-align: center; background-color: #f5f5f5;">
+    <div class="container">
+      <h1>Upload your image and select a style from drop-down menu</h1>
+    </div>
+
 	<form id="upload-form" action="{{url_for('upload')}}" method= "POST" enctype="multipart/form-data">
 		<input type="file" name="file" accept="image/*" multiple>
 		<input type="submit" value="Upload">
