--- a/templates/upload.html
+++ b/templates/upload.html
@@ -44,7 +44,7 @@
 
 
     <center>
-      <img src="sh1.png">
+      <img src="https://github.com/sander-ali/AliNST-app/blob/main/sh1.png">
     </center>
 
 <div class="jumbotron jumbotron-fluid py-4" style="text-align: center; background-color: #f5f5f5;">
